# SLM

./: .gitignore  SLM_architecture.py  batch_creation.py  dataset_cleaning.py  pyproject.toml  sample.py  training_config.py  vizuara_ai_labs_small_language_model_scratch_final.py
